--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,7 +1,7 @@
 :root>* {
-  --md-primary-fg-color: hsl(43, 30%, 51%);
-  --md-primary-fg-color--light: #ECB7B7;
-  --md-primary-fg-color--dark: #9b9b9b;
+  --md-primary-fg-color: hsl(38, 21%, 47%);
+  /* --md-primary-fg-color--light: #ECB7B7;
+  --md-primary-fg-color--dark: #9b9b9b; */
 }
 
 @font-face {
@@ -21,6 +21,12 @@ img[alt=test1] {
 
 img[alt=test2] {
   display: right;
+  width: 100%;
+  margin: auto;
+}
+
+img[alt=test3] {
+  display: left;
   width: 100%;
   margin: auto;
 }
@@ -48,3 +54,48 @@ img[alt=test2] {
   font-size: 16px;
 }
 
+.text-block3 {
+  padding-left: 3em;   /* 其餘行向右縮進 2 個字寬 */
+  padding-right: 1.5em;   /* 其餘行向右縮進 2 個字寬 */
+  margin: 20px auto;       /* 區塊置中 */
+  text-align: justify;      /* 左右對齊 */
+  line-height: 1.5em;       /* 調整行距，增加可讀性 */
+  font-size: 16px;
+}
+
+.text-block4 {
+  background-color: #f5f5f5; 
+  text-indent: -7.4em;   /* 首行負縮排，讓第一行保持原位 */
+  padding-left:9em;   /* 其餘行向右縮進 2 個字寬 */
+  padding-right: 1.5em;   /* 其餘行向右縮進 2 個字寬 */
+  margin: 20px auto;       /* 區塊置中 */
+  text-align: justify;      /* 左右對齊 */
+  line-height: 1.3em;       /* 調整行距，增加可讀性 */
+  font-size: 14px;
+}
+
+.text-block5 {
+  text-align: right;      /* 左右對齊 */
+  line-height: 0.8em;       /* 調整行距，增加可讀性 */
+  font-size: 12px;
+}
+
+
+.hanging-indent-NOTE {
+  background-color: #f5f5f5; 
+  text-indent: -3em;   /* 首行負縮排，讓第一行保持原位 */
+  text-align: justify;      /* 左右對齊 */
+  padding-left: 4.5em;   /* 其餘行向右縮進 2 個字寬 */
+  padding-right: 1.5em;   /* 其餘行向右縮進 2 個字寬 */
+  line-height: 1.5;    /* 調整行距 */
+  font-size: 14px;
+}
+
+.hanging-indent-IMP {
+  background-color: #f5f5f5; 
+  text-indent: -7.4em;   /* 首行負縮排，讓第一行保持原位 */
+  padding-left: 9em;   /* 其餘行向右縮進 2 個字寬 */
+  padding-right: 1.5em;   /* 其餘行向右縮進 2 個字寬 */
+  line-height: 1.5;    /* 調整行距 */
+  font-size: 14px;
+}
